[package]
name = "bevy_nostd_render"
version = "0.1.0"
edition = "2021"

[dependencies]
# Compatible Bevy Crates
# bevy_utils = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyECS", default-features = false }
bevy_ecs = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyECS", default-features = false }
bevy_app = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyECS", default-features = false }
# Not used but available for no-std
# bevy_ptr = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyECS", default-features = false }
# bevy_tasks = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyECS", default-features = false }

# Other
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"

[features]
default = ["std"]
std = []

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"
